# rust-wordle-solver

./: Cargo.toml  README.md  answers.txt  new_words.txt  valid_words.txt
src/: constants.rs  get_clues.rs  lib.rs  main.rs  score.rs  total_guesses.rs  wordle.rs
