[package]
name = "wordle-bot-fast-nolife"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["bin"]
bin = []

[profile.release] 
debug = true

[lib]
name = "wordlebotlib"
path = "src/lib.rs"

[[bin]]
name = "wordlebot"
path = "src/main.rs"
required-features = ["bin"]